correction safari

--- a/style.css
+++ b/style.css
@@ -96,8 +96,12 @@ p {
 		flex-direction: column;
 		align-items: center;
 		justify-content: space-between;
+		overflow-y:hidden;
 	}
 
+	.logo{
+		text-align:center;
+	}
 	.grille {
 		display: flex;
 		flex-direction: column;
@@ -106,7 +110,7 @@ p {
 
 	.content {
 		margin-top: 80px;
-		margin-bottom: 80px;
+		margin-bottom: 40px;
 	}
 
 	#logo {
